<resources>
    <string name="app_name">HIKERS</string>
    //start page
    <string name="Login" translatable="false">LOG IN</string>
    <string name="signup" translatable="false">SIGN UP</string>
    <string name="start_txt" translatable="false">Today Is Your Day !Your Mountain Is Waiting... So Get Your Way... &amp; Share Your Memories...</string>

    //login and register
    <string name="FullName" translatable="false">Full Name</string>
    <string name="Username" translatable="false">Username</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Password" translatable="false">Password</string>
    <string name="Register" translatable="false">Register</string>
    <string name="Register_txt" translatable="false">Already have an account? Log in</string>
    <string name="Login_txt" translatable="false">Don\'t have an account? Sign Up</string>

    //Fragment
    <string name="Search" translatable="false">Search...</string>

    //Activity

    <string name="username_profile" translatable="false">Username</string>
    <string name="full_name_profile" translatable="false">Full Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo_post_data">PHOTO</string>
    <string name="comments">Comments</string>
    <string name="post_commet">POST</string>
    <string name="save">SAVE</string>
    <string name="chang_photo">Change Photo</string>
    <string name="bio">BIO</string>
    <string name="title_activity_option1">Option1Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="map">Map</string>
    <string name="can_view_your_friends_where">View your friends where</string>
    <string name="content_desc">ImageViewDescription</string>
    <string name="compass">Compass</string>
    <string name="can_open_your_compass">Open Your Compass</string>
    <string name="torch">Torch</string>
    <string name="can_open_your_torch">Can open your torch</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="host">Host</string>
    <string name="host_your_map">Host Your Map</string>
    <string name="weather">Weather</string>
    <string name="exit">Exit</string>
    <string name="monday">Monday</string>
    <string name="_10">10</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="open_your_torch">Open Your Torch</string>
    <string name="make_a_call">Make a Call</string>
    <string name="make_a_massage">Make a Massage</string>
    <string name="check_weather">Check Weather</string>
    <string name="exit_hiking_mode">Exit Hiking Mode</string>
    <string name="event_data">Event</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="torch_on">Torch ON</string>
    <string name="torch_off">Torch OFF</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="post">POST</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_post_this">Are you sure you want to post this?</string>
    <string name="conformation">Conformation</string>
    <string name="notifications">Notifications</string>
    <string name="notification_for_tracking">Notification For Tracking</string>
    <string name="remove">Remove</string>
    <string name="accept">Accept</string>
    <string name="going">Going</string>
    <string name="Interested">Interested</string>


    <string name="channel_name">request chanel</string>
    <string name="channel_description">Request For Tracking</string>

    <string name="massage">Accept</string>
    <string name="massage2">Remove</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="country">Country</string>
    <string name="home_town">Home Town</string>
    <string name="group_name">Group Name</string>

</resources>
