<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.RegisterActivity">

<LinearLayout
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imagelogo_reg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/finallogo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_username"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_name"
        android:hint="@string/FullName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/Country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_country"
        android:hint="@string/country"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/HomeTown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_hometown"
        android:hint="@string/home_town"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="cursive"
        android:text="@string/Register"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>

</ScrollView>