<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_edit_post"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/close_edit_post"
                    android:fontFamily="@font/lucida_calligraphy_italic"
                    android:text="@string/edit_profile"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/save_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/save"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile_edit"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/loading" />

        <TextView
            android:id="@+id/dp_change"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/chang_photo"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/full_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name_profile"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/Username"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/bio"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:met_floatingLabel="normal" />

    </LinearLayout>

</LinearLayout>