<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CommentActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="#F1F1F1"
        android:layout_marginTop="1dp"
        android:padding=".2dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lucida_calligraphy_italic"
            android:text="@string/comments"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom"
            android:background="#fff"
            android:padding="4dp"
            android:layout_alignParentBottom="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/image_profile" />

            <EditText
                android:id="@+id/addcomment"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toRightOf="@+id/image_profile"
                android:background="@android:color/transparent"
                android:hint="@string/add_a_comment"
                android:inputType="text"
                android:maxHeight="5dp"
                android:maxLines="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post"
                android:text="@string/post_commet"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>




</RelativeLayout>