<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WeatherActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/img_weather_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/recyclerViewForecast"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textAlignment="center"
                android:textSize="28sp" />
            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="Done"/>

            <ImageView
                android:id="@+id/imgWeatherStatus"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc" />

            <TextView
                android:id="@+id/txtTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/min"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtMinTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/max"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtMaxTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txtWeatherStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent" />

</RelativeLayout>